test/types/records/init/no-default-init-generic-var.good
no-default-init-generic-var.chpl:3: error: default initialization with type 'R(int(64))' is not yet supported
no-default-init-generic-var.chpl:1: note: field 'genericField' is a generic value
no-default-init-generic-var.chpl:1: note: consider separately declaring a type field for it or using a 'new' call
